crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__with__unparenthesized_with_items.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/with/unparenthesized_with_items.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..249,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 86..102,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 91..95,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 91..95,
                                    id: Name("item"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 98..102,
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 103..124,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 108..117,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 108..112,
                                    id: Name("item"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 116..117,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 120..124,
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 125..141,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 130..135,
                            node_index: NodeIndex(None),
                            context_expr: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 130..135,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 131..135,
                                            id: Name("item"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 137..141,
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 142..163,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 147..157,
                            node_index: NodeIndex(None),
                            context_expr: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 147..152,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 148..152,
                                            id: Name("item"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 156..157,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 159..163,
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 164..193,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 169..175,
                            node_index: NodeIndex(None),
                            context_expr: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 169..175,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 170..175,
                                            id: Name("item1"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 177..187,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 177..182,
                                    id: Name("item2"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 186..187,
                                        id: Name("f"),
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 189..193,
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 194..223,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 199..209,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 199..204,
                                    id: Name("item1"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 208..209,
                                        id: Name("f"),
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                        WithItem {
                            range: 211..217,
                            node_index: NodeIndex(None),
                            context_expr: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 211..217,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 212..217,
                                            id: Name("item2"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 219..223,
                            },
                        ),
                    ],
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 224..249,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 229..233,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 229..233,
                                    id: Name("item"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 237..243,
                            node_index: NodeIndex(None),
                            context_expr: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 237..238,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 242..243,
                                        id: Name("f"),
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 245..249,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # For parenthesized with items test cases, refer to `./ambiguous_lpar_with_items.py`
2 |
3 | with item,: pass
  |          ^ Syntax Error: Trailing comma not allowed
4 | with item as x,: pass
5 | with *item: pass
  |


  |
3 | with item,: pass
4 | with item as x,: pass
  |               ^ Syntax Error: Trailing comma not allowed
5 | with *item: pass
6 | with *item as x: pass
  |


  |
3 | with item,: pass
4 | with item as x,: pass
5 | with *item: pass
  |      ^^^^^ Syntax Error: Starred expression cannot be used here
6 | with *item as x: pass
7 | with *item1, item2 as f: pass
  |


  |
4 | with item as x,: pass
5 | with *item: pass
6 | with *item as x: pass
  |      ^^^^^ Syntax Error: Starred expression cannot be used here
7 | with *item1, item2 as f: pass
8 | with item1 as f, *item2: pass
  |


  |
5 | with *item: pass
6 | with *item as x: pass
7 | with *item1, item2 as f: pass
  |      ^^^^^^ Syntax Error: Starred expression cannot be used here
8 | with item1 as f, *item2: pass
9 | with item := 0 as f: pass
  |


  |
6 | with *item as x: pass
7 | with *item1, item2 as f: pass
8 | with item1 as f, *item2: pass
  |                  ^^^^^^ Syntax Error: Starred expression cannot be used here
9 | with item := 0 as f: pass
  |


  |
7 | with *item1, item2 as f: pass
8 | with item1 as f, *item2: pass
9 | with item := 0 as f: pass
  |           ^^ Syntax Error: Expected `,`, found `:=`
  |
